--- a/biodiversity.ipynb
+++ b/biodiversity.ipynb
@@ -2,10 +2,123 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-14T21:19:16.347084Z",
+     "start_time": "2024-01-14T21:19:16.329469Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [],
+   "source": [
+    "observations_path = {'observations' : 'observations.csv'}\n",
+    "species_path = {'species' : 'species_info.csv'}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-15T02:56:31.110553Z",
+     "start_time": "2024-01-15T02:56:31.102572Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [],
+   "source": [
+    "obs_df= pd.read_csv(observations_path['observations'])\n",
+    "species_df= pd.read_csv(species_path['species'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-15T02:56:32.362920Z",
+     "start_time": "2024-01-15T02:56:32.215071Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            scientific_name                            park_name  observations\n",
+      "0        Vicia benghalensis  Great Smoky Mountains National Park            68\n",
+      "1            Neovison vison  Great Smoky Mountains National Park            77\n",
+      "2         Prunus subcordata               Yosemite National Park           138\n",
+      "3      Abutilon theophrasti                  Bryce National Park            84\n",
+      "4  Githopsis specularioides  Great Smoky Mountains National Park            85\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(obs_df.head())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-15T02:56:44.914202Z",
+     "start_time": "2024-01-15T02:56:44.897661Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  category                scientific_name  \\\n",
+      "0   Mammal  Clethrionomys gapperi gapperi   \n",
+      "1   Mammal                      Bos bison   \n",
+      "2   Mammal                     Bos taurus   \n",
+      "3   Mammal                     Ovis aries   \n",
+      "4   Mammal                 Cervus elaphus   \n",
+      "\n",
+      "                                        common_names conservation_status  \n",
+      "0                           Gapper's Red-Backed Vole                 NaN  \n",
+      "1                              American Bison, Bison                 NaN  \n",
+      "2  Aurochs, Aurochs, Domestic Cattle (Feral), Dom...                 NaN  \n",
+      "3  Domestic Sheep, Mouflon, Red Sheep, Sheep (Feral)                 NaN  \n",
+      "4                                      Wapiti Or Elk                 NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(species_df.head())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-15T02:56:48.371734Z",
+     "start_time": "2024-01-15T02:56:48.317073Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
