--- a/biodiversity.ipynb
+++ b/biodiversity.ipynb
@@ -13,6 +13,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
     "import seaborn as sns"
    ]
   },
